--- a/style.css
+++ b/style.css
@@ -54,3 +54,19 @@ body{
     cursor: pointer;  
 }
 
+.form i{
+    margin-left: -30px;
+    cursor: pointer;
+}
+
+.fa{
+    position: absolute;
+    cursor: pointer;
+    color: #999;
+    bottom: 190px;
+    left: 350px;
+}
+
+.fa.active{
+    color: midnightblue;
+}
